[package]
name = "wifi-ctrl"
version = "0.1.4"
edition = "2021"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
description = "Tokio-based runtimes for communicating with hostapd and wpa-supplicant"
license = "Apache-2.0"
repository = "https://github.com/novalabsxyz/wifi-ctrl"
readme = "README.md"
keywords = ["hostapd", "wpa-supplicant", "wpa_supplicant", "wpa-cli", "wifi"]

[dependencies]
config = {version="0", default-features = false, features = ["ini"]}
serde =  {version = "1", features = ["derive"] }
thiserror = "1"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["net",  "sync", "macros", "time"] }
log = { version = "0" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
env_logger = "0"
